--- a/email.ipynb
+++ b/email.ipynb
@@ -268,9 +268,7 @@
     "        'Recall': report['weighted avg']['recall'],\n",
     "        'F1-Score': report['weighted avg']['f1-score']\n",
     "    })\n",
-    "    # Lưu mô hình\n",
     "    joblib.dump(model, os.path.join(model_dir, f'{model_name.lower().replace(\" \", \"_\")}_model1.joblib'))\n",
-    "\n",
     "results_df = pd.DataFrame(results)\n",
     "results_df"
    ]
@@ -337,7 +335,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def count_words(df, words_file='words.txt'):\n",
+    "    with open(words_file, 'r') as file:\n",
+    "        words = [line.strip() for line in file.readlines()]\n",
+    "    \n",
+    "    word_counts = pd.DataFrame()\n",
+    "    \n",
+    "    for word in words:\n",
+    "        word_counts[word] = df['email'].apply(lambda x: x.lower().split().count(word))\n",
+    "    \n",
+    "    word_counts['label'] = df['label']\n",
+    "    \n",
+    "    word_counts.to_csv('dt1_split.csv', index=False)"
+   ]
   },
   {
    "cell_type": "markdown",
